I added overflow: auto to the scoreboard-container class to prevent overflow past the container.

--- a/css/scoreboard.css
+++ b/css/scoreboard.css
@@ -17,6 +17,7 @@
 #scoreboard-container {
   width: 100%;
   height: 100%;
+  overflow: auto;
 }
 
 #scoreboard-container > table {
